修复问题